--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -14,18 +16,18 @@
     // Some data we can work with
 
     const inventors = [
-      { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
-      { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
-      { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
-      { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
-      { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
-      { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
-      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
-      { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
-      { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
-      { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
+      {first: 'Albert', last: 'Einstein', year: 1879, passed: 1955},
+      {first: 'Isaac', last: 'Newton', year: 1643, passed: 1727},
+      {first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642},
+      {first: 'Marie', last: 'Curie', year: 1867, passed: 1934},
+      {first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630},
+      {first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543},
+      {first: 'Max', last: 'Planck', year: 1858, passed: 1947},
+      {first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979},
+      {first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852},
+      {first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905},
+      {first: 'Lise', last: 'Meitner', year: 1878, passed: 1968},
+      {first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909}
     ];
 
     const people = [
@@ -35,32 +37,55 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    console.log(inventors.filter((person) => person.year >= 1500 && person.year < 1600));
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    console.log(inventors.map((person) => `${person.first} ${person.last}`));
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.log(inventors.sort((inv1, inv2) => inv1.year - inv2.year));
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    console.log(inventors.reduce((total, inv) => total + inv.passed - inv.year), 0);
 
     // 5. Sort the inventors by years lived
+    console.log(inventors.sort((inv1, inv2) => (inv1.passed - inv1.year) - (inv2.passed - inv2.year)));
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const boulevards = ["de", "no", "nah", "nil", "node", "deeee", "eeeddeee"];
+    console.log(boulevards.filter((boul) => boul.includes("de")));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    console.log(people.sort((person, person2) => {
+      const lastName = person.split(", ")[1];
+      const lastName2 = person2.split(", ")[1];
+      if (lastName > lastName2) {
+        return 1;
+      } else {
+        return -1;
+      }
+    }));
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+    data.reduce((dataMap, vehicle) => {
+      if (!dataMap[vehicle]) {
+        dataMap[vehicle] = 1;
+      } else {
+        ++dataMap[vehicle];
+      }
+    }, []);
 
   </script>
 </body>
+
 </html>
